// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > should have the correct circle styles 1`] = `
.circuit-0 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  border-radius: 999999px;
  display: inline-block;
  padding: 2px 8px;
  font-weight: 700;
  text-align: center;
  letter-spacing: 0.25px;
  background-color: var(--cui-bg-highlight);
  color: var(--cui-fg-normal);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 2px 4px;
  height: 24px;
  width: 24px;
}

<div>
  <div
    class="circuit-0"
  />
</div>
`;

exports[`Badge > should render with danger styles 1`] = `
.circuit-0 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  border-radius: 999999px;
  display: inline-block;
  padding: 2px 8px;
  font-weight: 700;
  text-align: center;
  letter-spacing: 0.25px;
  background-color: var(--cui-bg-danger-strong);
  color: var(--cui-fg-on-strong);
}

<div>
  <div
    class="circuit-0"
  />
</div>
`;

exports[`Badge > should render with default styles 1`] = `
.circuit-0 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  border-radius: 999999px;
  display: inline-block;
  padding: 2px 8px;
  font-weight: 700;
  text-align: center;
  letter-spacing: 0.25px;
  background-color: var(--cui-bg-highlight);
  color: var(--cui-fg-normal);
}

<div>
  <div
    class="circuit-0"
  />
</div>
`;

exports[`Badge > should render with neutral styles 1`] = `
.circuit-0 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  border-radius: 999999px;
  display: inline-block;
  padding: 2px 8px;
  font-weight: 700;
  text-align: center;
  letter-spacing: 0.25px;
  background-color: var(--cui-bg-highlight);
  color: var(--cui-fg-normal);
}

<div>
  <div
    class="circuit-0"
  />
</div>
`;

exports[`Badge > should render with promo styles 1`] = `
.circuit-0 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  border-radius: 999999px;
  display: inline-block;
  padding: 2px 8px;
  font-weight: 700;
  text-align: center;
  letter-spacing: 0.25px;
  background-color: var(--cui-bg-promo-strong);
  color: var(--cui-fg-on-strong);
}

<div>
  <div
    class="circuit-0"
  />
</div>
`;

exports[`Badge > should render with success styles 1`] = `
.circuit-0 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  border-radius: 999999px;
  display: inline-block;
  padding: 2px 8px;
  font-weight: 700;
  text-align: center;
  letter-spacing: 0.25px;
  background-color: var(--cui-bg-success-strong);
  color: var(--cui-fg-on-strong);
}

<div>
  <div
    class="circuit-0"
  />
</div>
`;

exports[`Badge > should render with warning styles 1`] = `
.circuit-0 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  border-radius: 999999px;
  display: inline-block;
  padding: 2px 8px;
  font-weight: 700;
  text-align: center;
  letter-spacing: 0.25px;
  background-color: var(--cui-bg-warning-strong);
  color: var(--cui-fg-on-strong);
}

<div>
  <div
    class="circuit-0"
  />
</div>
`;
